<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/demoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/app_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_below="@+id/demoTitle"
        android:layout_height="1dip"
        android:background="#eeeeee" />
    
    <ScrollView
        android:id="@+id/demoScroller"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/separator"
     >

        <TextView
            android:id="@+id/consoleText"
            android:textIsSelectable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace" />
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:id="@+id/button_clockwise"
                android:text="@string/clockwise"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:id="@+id/button_counterclockwise"
                android:text="@string/counterclockwise"/>
        </LinearLayout>
        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:id="@+id/button_fullclockwise"
            android:text="@string/fullclockwise"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:id="@+id/button_fullcounterclockwise"
            android:text="@string/fullcounterclockwise"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>

</LinearLayout>